kubernetes/app/namespace.yml
apiVersion: v1
kind: Namespace
metadata: 
  name: nyan-cat
  labels:
    name: nyan-cat
