kubernetes/app/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: nyan-cat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "35.246.246.77.nip.io"
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: nyan-cat-svc
            port:
              number: 80
